[strings] generated strings

--- a/android/res/values-ru/strings.xml
+++ b/android/res/values-ru/strings.xml
@@ -1159,4 +1159,11 @@
 	<string name="placepage_add_stop">Заехать</string>
 	<string name="whatsnew_intermediate_point_title">Промежуточная остановка</string>
 	<string name="whatsnew_intermediate_point_message">Планируйте маршрут с дополнительной остановкой.</string>
+	<string name="subtitle_rent">Аренда</string>
+	<string name="rub_month">₽/мес.</string>
+	<string name="room">%S-комн. кв.</string>
+	<string name="real_estate">Недвижимость</string>
+	<string name="title_cian_load_information">Проверенное жильё</string>
+	<string name="subtitle_cian_load_information">Узнай сколько стоят квартиры в этом доме</string>
+	<string name="error_load_information">Не удалось загрузить информацию</string>
 </resources>
