--- a/iphone/Maps/LocalizedStrings/vi.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/vi.lproj/Localizable.strings
@@ -1996,3 +1996,17 @@
 "whatsnew_intermediate_point_title" = "Điểm dừng bổ sung";
 
 "whatsnew_intermediate_point_message" = "Lập một lộ trình với một điểm trung gian.";
+
+"subtitle_rent" = "Rent";
+
+"rub_month" = "₽/month";
+
+"room" = "%S room(s) apart.";
+
+"real_estate" = "Real estate";
+
+"title_cian_load_information" = "Verified accommodation";
+
+"subtitle_cian_load_information" = "Find out how much the apartments cost in this house";
+
+"error_load_information" = "Could not load information";
