--- a/android/res/values-cs/strings.xml
+++ b/android/res/values-cs/strings.xml
@@ -752,4 +752,5 @@
 	<string name="placepage_add_stop">Přidat zastávku</string>
 	<string name="whatsnew_intermediate_point_title">Další zastávka</string>
 	<string name="whatsnew_intermediate_point_message">Naplánujte trasu s průjezdním bodem.</string>
+	<string name="disable_autodownload">Zakázat automatické stahování</string>
 </resources>
