--- a/android/res/values-da/strings.xml
+++ b/android/res/values-da/strings.xml
@@ -755,4 +755,5 @@
 	<string name="placepage_add_stop">Tilføj stop</string>
 	<string name="whatsnew_intermediate_point_title">Ekstra stop</string>
 	<string name="whatsnew_intermediate_point_message">Planlæg en rute med et mellemliggende punkt.</string>
+	<string name="disable_autodownload">Deaktiver automatisk download</string>
 </resources>
