--- a/android/res/values-de/strings.xml
+++ b/android/res/values-de/strings.xml
@@ -757,4 +757,5 @@
 	<string name="placepage_add_stop">Zwischenstopp hinzufügen</string>
 	<string name="whatsnew_intermediate_point_title">Zusätzlicher Stopp</string>
 	<string name="whatsnew_intermediate_point_message">Planen Sie eine Route mit Zwischenstopp.</string>
+	<string name="disable_autodownload">Automatischen Download deaktivieren</string>
 </resources>
