--- a/android/res/values-in/strings.xml
+++ b/android/res/values-in/strings.xml
@@ -754,4 +754,5 @@
 	<string name="placepage_add_stop">Tambah perhentian</string>
 	<string name="whatsnew_intermediate_point_title">Perhentian tambahan</string>
 	<string name="whatsnew_intermediate_point_message">Rencanakan rute dengan titik antara.</string>
+	<string name="disable_autodownload">Nonaktifkan unduh otomatis</string>
 </resources>
