--- a/android/res/values-pl/strings.xml
+++ b/android/res/values-pl/strings.xml
@@ -752,4 +752,5 @@
 	<string name="placepage_add_stop">Dodaj postój</string>
 	<string name="whatsnew_intermediate_point_title">Dodatkowy postój</string>
 	<string name="whatsnew_intermediate_point_message">Zaplanuj trasę z postojem.</string>
+	<string name="disable_autodownload">Wyłącz automatyczne pobieranie</string>
 </resources>
