--- a/android/res/values-pt/strings.xml
+++ b/android/res/values-pt/strings.xml
@@ -754,4 +754,5 @@
 	<string name="placepage_add_stop">Adicionar paragem</string>
 	<string name="whatsnew_intermediate_point_title">Paragem de adicional</string>
 	<string name="whatsnew_intermediate_point_message">Planeie uma rota com um ponto intermédio.</string>
+	<string name="disable_autodownload">Desativar o download automático</string>
 </resources>
