--- a/android/res/values-ro/strings.xml
+++ b/android/res/values-ro/strings.xml
@@ -754,4 +754,5 @@
 	<string name="placepage_add_stop">Adăugare oprire</string>
 	<string name="whatsnew_intermediate_point_title">Oprire suplimentară</string>
 	<string name="whatsnew_intermediate_point_message">Planificați o rută cu un punct intermediar.</string>
+	<string name="disable_autodownload">Dezactivare descărcare automată</string>
 </resources>
