--- a/android/res/values-tr/strings.xml
+++ b/android/res/values-tr/strings.xml
@@ -755,4 +755,5 @@
 	<string name="placepage_add_stop">Ara nokta ekle</string>
 	<string name="whatsnew_intermediate_point_title">Ek ara nokta</string>
 	<string name="whatsnew_intermediate_point_message">Güzergâhlarınızı ara noktalarla planlayın.</string>
+	<string name="disable_autodownload">Otomatik indirmeyi devre dışı bırak</string>
 </resources>
