--- a/android/res/values-vi/strings.xml
+++ b/android/res/values-vi/strings.xml
@@ -755,4 +755,5 @@
 	<string name="placepage_add_stop">Thêm điểm dừng</string>
 	<string name="whatsnew_intermediate_point_title">Điểm dừng bổ sung</string>
 	<string name="whatsnew_intermediate_point_message">Lập một lộ trình với một điểm trung gian.</string>
+	<string name="disable_autodownload">Tắt chế độ tự động tải xuống</string>
 </resources>
