--- a/iphone/Maps/LocalizedStrings/ja.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ja.lproj/Localizable.strings
@@ -1339,6 +1339,8 @@
 /* Only ru/en are needed */
 "preloader_cian_button" = "Learn more";
 
+"disable_autodownload" = "自動ダウンロードを無効にする";
+
 "add_my_position" = "Add my position";
 
 "choose_start_point" = "Choose a starting point";
